<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>
  The 'robot_description' package provides a comprehensive model of our custom robot,
  essential for simulation and visualization in ROS2 environments. It includes a detailed
  URDF (Unified Robot Description Format) file that specifies the robot's physical
  structure, joint configurations, and kinematic properties. Accompanying this URDF
  are Collada (.dae) format meshes derived from CAD files, offering a realistic visual
  representation of the robot. Additionally, this package encompasses RViz configuration
  files for effective visualization and debugging, alongside launch files for easy
  integration and testing within ROS2 frameworks. This package is pivotal for the robot's
  simulation and serves as a foundation for further development in autonomous navigation
  and SLAM (Simultaneous Localization and Mapping).
  </description>

  <maintainer email="aposporisalexander@gmail.com">Alexandros Rafael Aposporis - aimechengineer </maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_localization</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
