<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_patrol</name>
  <version>0.0.0</version>
  <description>
  The 'robot_patrol' package embodies the practical application of autonomous navigation in a household setting, bringing to life the concept of a robot reliably patrolling a defined area. At its core is a Python-based node that seamlessly blends with ROS2's navigation framework. This node acts as a commander, guiding the robot along a series of predetermined waypoints, effectively 'patrolling' the house.
  This package showcases an elegant integration of custom path planning with ROS2's sophisticated navigation capabilities. It's not just about moving from point A to point B; it's about doing so with precision, efficiency, and adaptability. The waypoints are strategically chosen to ensure comprehensive coverage of the environment, demonstrating the robot's ability to navigate complex indoor spaces.
  Moreover, the 'robot_patrol' package serves as a testament to the flexibility of ROS2 systems in accommodating custom logic and commands, extending beyond standard navigation tasks. This flexibility is crucial for designing robots capable of performing specific missions, such as surveillance, routine inspections, or even interactive guides in domestic settings.
  In essence, 'robot_patrol' is where the theoretical aspects of robotics meet practical application, highlighting a significant step towards autonomous, intelligent robotic systems in everyday environments.
  </description>

  <maintainer email="aposporisalexander@gmail.com">Alexandros Rafael Aposporis - aimechengineer</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
