<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_simulation</name>
  <version>0.0.0</version>
  <description>
    The 'robot_simulation' package facilitates advanced simulation capabilities for a custom robot in a household environment. 
    It includes 'house_slam.launch.py' for conducting SLAM (Simultaneous Localization and Mapping), enabling the robot to generate 
    and refine maps in a realistic house world. The 'house_sim.launch.py' provides a basic simulation setup with the robot in the 
    household environment. Furthermore, the package supports autonomous navigation; following map generation, the 
    'autonomous_navigation.launch.py' leverages Nav2's capabilities for robust autonomous movement and localization within the 
    simulated environment. Integration with RViz is also featured, offering real-time visualization of the robot's navigation and 
    the environment map, enhancing both the development and demonstration aspects of robotic simulations.
  </description>
  <maintainer email="aposporisalexander@gmail.com">Alexandros Rafael Aposporis - aimechengineer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
